Fix bug 246156, kopete connection timeout around every 3 minutes. Patch by Ike Devolder, thanks.

BUG: 246156

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1157349